# roulette

./: .gitignore  CMakeLists.txt  README.md
include/: bets.h  player.h  roulette.h  rules.h
include/player/: player.h
include/roulette/: number.h  roulette.h  rules.h  simplebet.h
src/: main.cpp  player.cpp  roulette.cpp  rules.cpp
src/player/: player.cpp
src/roulette/: roulette.cpp  simplebet.cpp
